# ifcOcctViewer

./: .gitignore  01_filterd.ifc  CMakeLists.txt  GlfwOcctView.cpp  GlfwOcctView.h  IfcOpenHouse.ifc  main.cpp  readme.md
